# dummy_service

./: Dockerfile  README.md  dummy.py  pyproject.toml
openapi/: api.yml
